public class UserAccountManager {
    public void createAccount() {}
    public void logIn(User user) {}
    public void logOut(User user) {}
    public void uploadId() {}
    public void verifyId() {}
}
